Created new theme.

--- a/source/_themes/modern/theme.conf
+++ b/source/_themes/modern/theme.conf
@@ -1,4 +1,5 @@
 [theme]
 inherit = basic
 stylesheet = modern.css
-pygments_style = modern_theme_support.SublimeStyle
+pygments_style = 
+sidebar = false
